# delta_utils

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  Dockerfile  LICENSE  LICENSE.md  README.md  docker-compose.yaml  docker-compose.yml  mkdocs.yml  pyproject.toml  runtests.sh  setup.cfg
.github/: dependabot.yml
.github/workflows/: changelog.yml  codeql-analysis.yml  python-app.yml  version-bump.yml  version-tag.yml
delta_utils/: __init__.py  clean.py  core.py  dst.py  fileregistry.py  geocoding.py  lineage.py  pii.py  ssm.py  utils.py
docs/: clean.md  core.md  geocoding.md  installation.md  lineage.md  pii.md  requirements.txt  ssm.md  usage.md
mkdocs_plugins/: __init__.py  files.py
tests/: conftest.py  test_clean.py  test_delta_changes_class.py  test_dst.py  test_fileregistry.py  test_geocoding.py  test_lineage.py  test_new_and_updated.py  test_non_delta_last_written_timestamp.py  test_pii.py  test_read_delta_changes.py  test_simple.py  test_ssm.py
