[tool.poetry]
name = "delta_utils"
version = "0.4.0"
description = ""
authors = ["Niels Lemmens <1936122+bulv1ne@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/husqvarnagroup/delta_utils/"
documentation = "https://delta-utils.readthedocs.io/en/latest/"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.34.7"
reverse_geocoder = "*"
iso3166 = "*"
requests = "*"

[tool.poetry.dev-dependencies]
delta-spark = "*"
pyspark = "<3.4"
mkdocs-material = "*"
mkdocstrings-python = "*"
black = "*"
isort = "*"
flake8 = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
mkdocs = "^1.4"
moto = {extras = ["s3"], version = "*"}
boto3-stubs = {extras = ["s3"], version = "*"}
requests-mock = "*"
types-requests = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."mkdocs.plugins"]
RootFiles = "mkdocs_plugins.files:RootFiles"
