[project]
name = "delta_utils"
version = "0.6.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
repository = "https://github.com/husqvarnagroup/delta_utils/"
documentation = "https://delta-utils.readthedocs.io/en/latest/"
license = "MIT"

dependencies = [
    "boto3>=1.40",
    "reverse_geocoder",
    "iso3166",
    "requests",
    "pyarrow"
]

[dependency-groups]
dev = [
    "delta-spark",
    "pyspark>=3.5",
    "mkdocs-material",
    "mkdocstrings-python",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "mkdocs>=1.4",
    "moto[s3]",
    "boto3-stubs[s3]",
    "requests-mock",
    "types-requests",
    "pandas>=1.0.5",
    "mypy>=1.19.0",
]

[[project.authors]]
name = "Niels Lemmens"
email = "niels.lemmens@husqvarnagroup.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."mkdocs.plugins"]
RootFiles = "mkdocs_plugins.files:RootFiles"
